# task_prediction

./: .gitignore  Dockerfile  README.md  aware.sh  docker-compose.yml  pyproject.toml
bash/: build_to_polaris.sh  copy_from_polaris.sh
models/xgboost_hierarchical_v5/: stageA_metadata.json  stageA_model.ubj  stageB_metadata.json
scripts/: convert_model_pickle.py  process_polaris_db.py  replay_intent.py  stitch_gopro_videos.py
src/task_prediction/: __main__.py
src/task_prediction/adapters/proto/: parse.py
src/task_prediction/adapters/struct/: task_pred.py
src/task_prediction/configs/: __init__.py  app.py  utils.py
src/task_prediction/core/: factories.py  manager.py  system.py
src/task_prediction/data_processors/: __init__.py
src/task_prediction/features/: pipeline.py
src/task_prediction/features/asd/: __init__.py  activity.py  clearance.py  mouse.py  popup.py  track.py  transfer.py
src/task_prediction/features/gaze/: __init__.py  blinks.py  metrics.py  time_series.py
src/task_prediction/inference/: predictor.py
src/task_prediction/models/: __init__.py  gaze.py  prediction.py  screen_position.py
src/task_prediction/models/asd/: __init__.py  aware_action_interaction.py  clearance.py  distance_measurement.py  keyboard_shortcut.py  mouse_position.py  pop_up.py  (+7 more)
src/task_prediction/runners/: base.py  server.py
src/task_prediction/sinks/: __init__.py  base.py  nats.py  parquet.py  terminal.py
src/task_prediction/state/: snapshots.py  stream_buffer.py
src/task_prediction/utils/: end_token.py  logging.py  types.py
viz/: gaze.py  listener.py
(+21 files in other folders)
